--- a/req.html
+++ b/req.html
@@ -342,7 +342,7 @@
     }
 
     function TGre() {
-        const tglink = "https://telegram.dog/nocopyright_lcubot?start=file_%s";
+        const tglink = "https://telegram.dog/nocopyright_bot?start=file_%s";
         window.location.href = tglink;
     }
 
@@ -417,7 +417,7 @@
 <footer>
         <p style="font-size: 15px; color:#7b89a3;padding-top: 30px ;margin:0px 10px; border-top: 1px solid #c2cee3;">
       This website only provide service that help you convert your Telegram File to Online Streaming.
-      You can report the file/video that contains a problem like copyright, 18+, violence, et. Report <a href="https://telegram.dog/lcu_adminbot" style="color: darkorange"><b>Here</b></a>
+      You can report the file/video that contains a problem like copyright, 18+, violence, et. Report <a href="https://telegram.dog/Contact_R2" style="color: darkorange"><b>Here</b></a>
       <p style="text-align:center">&copy; LCU BOTS PROJECT</p>
       <iframe src="//referads.xyz/codes/banner?rcd=NDg=" scrolling="no" style="width:300px; height:250px; border:0px; padding:0;overflow:hidden" allowtransparency="true"></iframe>
 </footer>    
